[tool.poetry]
name = "goodimages"
version = "0.1.0"
description = ""
authors = ["Yohimbe227 <kamanchi22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
replicate = "^0.26.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
